...
        android:text="@string/choose_location"
        app:layout_constraintEnd_toEndOf="@+id/startPlace"
        app:layout_constraintStart_toStartOf="@+id/startPlace"
        app:layout_constraintTop_toBottomOf="@+id/startPlace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Search Routes"
...
