...
                    android:contentDescription="@string/image_of_nairobi_city"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/nairobi" />

                <Button
                    android:id="@+id/buttonQ"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
...
