...
                        app:layout_constraintBottom_toBottomOf="@id/imageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageView2"
                        app:layout_constraintTop_toTopOf="@id/imageView2" />

                    <Button
                        android:id="@+id/okButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/pad_16"
                        android:layout_marginRight="@dimen/pad_16"
                        android:padding="@dimen/pad_8dp"
                        android:text="OK"
...
